# photoEditer

./: .gitignore  README.en.md  README.ko.md  README.md  install.ps1  package.json
apps/backend/: README.md
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
docs/: AI_CORRECTION_REDESIGN.md  API.md  ARCHITECTURE.md  COMPLETION_AUDIT.md  LIGHTROOM_FEATURE_DECOMPOSITION.md  LIGHTROOM_HISTOGRAM_COMPAT.md  LOCAL_AI_TRAINING_OPTIONS.md  PRODUCT_SPEC.md  PROJECT_GUIDELINES.md  ROADMAP.md  THIRD_PARTY_DATA_POLICY.md
docs/design/: design-qa.md
reference/: README.md
reference/luts/: source_registry.json  style_index.json
reference/manifests/: example.json
reference/presets/: source_registry.json  style_index.json
scripts/: build_lut_style_index.py  build_preset_style_index.py  dev.ps1  dev.sh  ingest_editingfree_youtube_presets.py  ingest_nick_driftwood_luts.py  ingest_nick_driftwood_to_300.py  ingest_panasonic_luts.py  ingest_public_luts.py  ingest_qddl_luts.py  ingest_thepresetsroom_presets.py  photo.mjs  run_backend.mjs  setup.mjs  smoke_codex_recommend.py  validate_lut_style_prompts.py
tonepilot-local/: .gitignore  pnpm-lock.yaml
tonepilot-local/apps/backend/: .env.example  README.md  pyproject.toml
tonepilot-local/apps/backend/app/: __init__.py  main.py
tonepilot-local/apps/backend/app/routers/: export.py  health.py  images.py
tonepilot-local/apps/backend/app/services/: metadata.py  raw_analysis.py  style_interpreter.py
tonepilot-local/apps/backend/tests/: test_api.py  test_renderer.py
tonepilot-local/docs/: API.md  ROADMAP.md  (+2 more)
(+517 files in other folders)
