[project]
name = "tonepilot-backend"
version = "0.1.0"
description = "Local backend for TonePilot photo correction recommendations"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]
raw = [
  "rawpy>=0.21.0"
]
exif = [
  "exifread>=3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

